--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
     <link href="css/theme.css" rel="stylesheet">
     <link href="css/apna.css" rel="stylesheet">
     <link rel="stylesheet" href="bower_components/angular-ui-notification/dist/angular-ui-notification.min.css">
+    <link href="css/dropdowns-enhancement.css" rel="stylesheet">
     <!-- endbuild -->
   </head>
   <body ng-app="whereIsEveryoneApp">
@@ -74,6 +75,7 @@
 <script src="js/jquery-impromptu.js"></script>
 <script src="bower_components/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
 <script src="js/full-calendar/fullcalendar.min.js"></script>
+<script src="js/dropdowns-enhancement.js"></script>
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
