--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="js/jquery-impromptu.js"></script>
 <script src="bower_components/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
+<script src="js/jquery-ui.js"></script>
 <script src="js/full-calendar/fullcalendar.min.js"></script>
 <script src="js/dropdowns-enhancement.js"></script>
 
